| Summary: | ASTERISK-25048: Astobj2: Initialization order wrong when both refdebug and AO2_DEBUG are both enabled. | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2015-05-01 13:23:08 | Date Closed: | 2015-05-02 10:18:29 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/AstMM |
| Versions: | SVN 13.3.2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | In Asterisk 13+ AO2_DEBUG allocates an ao2_container. This is done before refdebug is initialized, so the allocation is not recorded to refs log. | ||
| Comments: | |||